--- a/index.css
+++ b/index.css
@@ -264,6 +264,9 @@ input[type="radio"]{
 /*------------------media-queries------------*/
 
 @media screen and (max-width: 768px) {
+    body{
+        animation: gradient 16s ease-in-out infinite;
+    }
     .header{
         width: 28vw;
     }
